--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,13 +5,20 @@ RUN apt-get install -y python3
 RUN apt-get install -y python3-pip
 RUN pip install --upgrade pip
 
-# Set the working directory
-WORKDIR /server/
-COPY ./requirements.txt /server/
-RUN pip install -r requirements.txt
+RUN mkdir /src
+WORKDIR /src
+COPY server.py /src/server.py
+COPY deploy.sh /src/deploy.sh
+COPY requirements.txt /src/requirements.txt
 
+RUN pip install -r requirements.txt
 RUN apt-get install -y default-mysql-server
 
-COPY . /server/
+EXPOSE 5000
 
-CMD ["bash","./deploy.sh"]
+
+ENTRYPOINT  [ "bash" ]
+CMD [ "deploy.sh"]
+
+# run using:
+# docker run --rm -p 5001:5000 --name server1 -e serverID=123 dserver:latest
